--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body{
             padding: 12vh;
             margin-top: 8vh;
             background-color: rgb(198, 171, 198);
-            width: 50vw;
+            width: 60%;
             padding: 20vh 15vw;
             border-radius: 4rem;
         }
@@ -29,7 +29,7 @@ body{
         #bckimg{
             background-repeat: no-repeat;
             background-position: center;
-            background-size: 20px;
+            background-size: 20vw;
         }
 
         h1 {
@@ -41,7 +41,7 @@ body{
         }
 
         .main-container-box span {
-            font-size: 40px;
+            font-size: 6vh;
             color: black;
             
         }
@@ -49,7 +49,7 @@ body{
         .inp {
             padding: 2vh 2vw;
             margin: 2vh auto;
-            font-size: 20px;
+            font-size: 2.765vh;
             font-weight: bold;
             text-align: center;
         }
@@ -57,20 +57,51 @@ body{
         .temp_type{
             display: flex;
             flex-direction: column;
+            width: 20vw;
         }
 
         .temp-type{
             text-align: justify;
             margin: -2vh auto;
             padding: 0vh 7.90999vw;
-            border-radius: 2px;
+            border-radius: 0.5vh;
+            width: 24.28vw;
         }
 
         label {
-            font-size: 25px;
+            font-size: 3.5vh;
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             font-weight: bolder;
         }
+
+        @media(max-width:400px){
+            .temp_type{
+                display: flex;
+                flex-direction: column;
+                width: 40vw;
+            }
+        }
+
+        @media(max-width:765px){
+            .main-container-box{
+                display: flex;
+                flex-direction: column;
+            }
+
+            .main-container-box span{
+                margin-top: 20px;
+                margin-bottom: 10px;
+            }
+
+            #myCel{
+                margin-bottom: -3vh;
+            }
+
+            #myFah{
+                margin-bottom: -3vh;
+            }
+        }
+
     </style>
 </head>
 
